--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LP</title>
-    <link rel="stylesheet" href="../landing-page/assets/css/variables.css">
-    <link rel="stylesheet" href="../landing-page/assets/css/elements.css">
-    <link rel="stylesheet" href="../landing-page/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="assets/css/elements.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
                     omnis, hic excepturi repudiandae incidunt cum.</p>
             </div>
             <div class="intro-img">
-                ,<img src="../landing-page/assets/seção_1.svg" alt="imagem javascript">
+                ,<img src="assets/seção_1.svg" alt="imagem javascript">
             </div>
         </div>
     </section>
@@ -236,7 +236,7 @@
                     omnis, hic excepturi repudiandae incidunt cum.</p>
             </div>
             <div class="intro2-img">
-                <img src="../landing-page/assets/seção-form2.svg" alt="imagem javascript">
+                <img src="assets/seção-form2.svg" alt="imagem javascript">
             </div>
 
             <div class="contact-form">
