--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#grid-one">Grid One</a></li>
                     <li><a href="#gallery">Galeria</a></li>
                     <li><a href="#grid-two">Grid Two</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </div>
